Generate Corpus Vocabulary

--- a/Covid19Tweets_Codes.ipynb
+++ b/Covid19Tweets_Codes.ipynb
@@ -118,8 +118,7 @@
     "        if tweet_date not in tweet_dict.keys():\n",
     "            tweet_dict[tweet_date]=tweet_list\n",
     "        else:\n",
-    "            tweet_dict[tweet_date]+=tweet_list\n",
-    "#Take 10 minutes to finish running this code block, since there are thousands of text files"
+    "            tweet_dict[tweet_date]+=tweet_list"
    ]
   },
   {
@@ -141,8 +140,7 @@
     "        tweet_dict[day][i]['text']=tweet_dict[day][i]['text'].encode('utf-16','surrogatepass').decode('utf-16')\n",
     "        if langid.classify(tweet_dict[day][i]['text'])[0]!='en':\n",
     "            non_en.append(tweet_dict[day][i])\n",
-    "    tweet_dict[day]=[tweet for tweet in tweet_dict[day] if tweet not in non_en]\n",
-    "#Take about 5 minutes to finish running this code block"
+    "    tweet_dict[day]=[tweet for tweet in tweet_dict[day] if tweet not in non_en]"
    ]
   },
   {
@@ -271,6 +269,256 @@
     "\n",
     "In this section, with a secondary data file, which contains 80+ sheets of tweets, each sheet with 2000 tweets, I will generate the corpus vocabulary and sort it alphabetically. Afterwards, for each sheet, I calculate the top 100 frequent unigrams and top 100 frequent bigrams. Lastly, I will generate the sparse representation of the excel file."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Import libraries\n",
+    "\n",
+    "#For reading dataframe\n",
+    "import pandas as pd  \n",
+    "\n",
+    "#Natural Language Toolkit\n",
+    "import nltk\n",
+    "\n",
+    "#for tokenization\n",
+    "from nltk import RegexpTokenizer\n",
+    "\n",
+    "#for stemming\n",
+    "from nltk.stem import PorterStemmer\n",
+    "\n",
+    "#for computing distribution from a set of word token\n",
+    "from nltk.probability import *\n",
+    "\n",
+    "#for parallel processing\n",
+    "from itertools import chain\n",
+    "\n",
+    "#for extracting n-grams\n",
+    "from nltk.util import ngrams\n",
+    "\n",
+    "#for ensuring bigrams are not split into 2 words\n",
+    "from nltk.tokenize import MWETokenizer\n",
+    "\n",
+    "#for creating sparse matrix\n",
+    "from sklearn.feature_extraction.text import CountVectorizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pandas.io.excel._base.ExcelFile at 0x266199c2088>"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Load data\n",
+    "excel_data=pd.ExcelFile('Covid19Tweets_Part2.xlsx')\n",
+    "excel_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "81"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#There are 81 sheets in this excel file\n",
+    "len(excel_data.sheet_names)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, we create stopword lists from `stopwords_en` file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stopwords_list=()\n",
+    "with open('stopwords_en.txt') as f:\n",
+    "    stopwords_list=f.read().splitlines()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#We create 2 empty dictionaries and an empty list to store values later\n",
+    "mydict,mybidict,mylist={},{},[]\n",
+    "\n",
+    "#We will loop over all the sheets in the excel_data\n",
+    "for sheet in excel_data.sheet_names:\n",
+    "    dataset=excel_data.parse(sheet)\n",
+    "    \n",
+    "    #Shift the dataframe to correct position\n",
+    "    dataset=dataset.dropna(1,thresh=1)\n",
+    "    df=dataset.dropna()\n",
+    "    \n",
+    "    #Since there are some dataframes that already have the column header correct, run this \"if\" statement\n",
+    "    if df.columns.any() not in ['text','id','created_at']:\n",
+    "        #Make the first row the column header and remove the redundant first row afterwards\n",
+    "        df.columns=df.iloc[0]\n",
+    "        df=df[1:]\n",
+    "        \n",
+    "    #Create a new column \"verified\" which contains the boolean value for if the tweet is in english\n",
+    "    df['verified']=df['text'].apply(lambda x:langid.classify(str(x))[0]=='en')\n",
+    "    \n",
+    "    #Only retain tweets that are in English\n",
+    "    df=df[df.verified==True]\n",
+    "    \n",
+    "    #Combine all the rows in 'text' column into a string and perform case normalization\n",
+    "    textstr=str(df['text'].tolist())\n",
+    "    textstr=textstr.lower()\n",
+    "    \n",
+    "    #Use regex expression to tokenize the newly created string\n",
+    "    tokenizer=RegexpTokenizer(r\"[a-zA-Z]+(?:[-'][a-zA-Z]+)?\")\n",
+    "    tokens=tokenizer.tokenize(textstr)\n",
+    "    \n",
+    "    #Add all the tokens created into mylist which will be used to create bigrams later\n",
+    "    for i in tokens:\n",
+    "        mylist.append(i)\n",
+    "        \n",
+    "    #add the key-value of sheet and tokens into mybidict dictionary created early so we use it to find out the top frequent\n",
+    "    #bigram later on\n",
+    "    mybidict[sheet]=[token for token in tokens]\n",
+    "    \n",
+    "    #Retains the list of tokens after removing stopwords\n",
+    "    ind_filtered_tokens=[token for token in tokens if token not in stopwords_list]\n",
+    "    \n",
+    "    #Store this sheet-name and list of tokens as key-value pairs in mydict\n",
+    "    mydict[sheet]=ind_filtered_tokens"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we move on to remove context-dependent stop words, then stemming and remove tokens with very short length"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Create words_df variable to record the number of documents each word appear in, by ensuring that each word appears only once\n",
+    "words_df=list(chain.from_iterable([set(value) for value in mydict.values()]))\n",
+    "\n",
+    "#Create words_tf variable to record the number of times each word appears\n",
+    "words_tf=list(chain.from_iterable(mydict.values()))\n",
+    "\n",
+    "#This gives the document frequency of each word\n",
+    "a=FreqDist(words_df)\n",
+    "\n",
+    "#Create this empty dictionary to store only words that appear in less than 60 documents but more than 5 documents\n",
+    "b={}\n",
+    "for k,v in a.items():\n",
+    "    if v<=60 and v>=5:\n",
+    "        b[k]=v\n",
+    "\n",
+    "#Get all the words collected above into a new list fil_list\n",
+    "fil_list=[i for i in words_tf if i in b.keys()]\n",
+    "\n",
+    "#Perform stemming on each of these words in the newly created list fil_list\n",
+    "stemmer=PorterStemmer()\n",
+    "stem_fil_token=[stemmer.stem(i) for i in fil_list]\n",
+    "    \n",
+    "#Retain only tokens with length longer or equal to 3 into a new list filtered_token\n",
+    "filtered_token=[token for token in stem_fil_token if len(token)>3 or len(token)==3]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then we use PMI measure to find the first 200 meaningful bigrams, concatenate them with an underscore and add them to the filter_token list above"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bigram_measures=nltk.collocations.BigramAssocMeasures()\n",
+    "finder=nltk.collocations.BigramCollocationFinder.from_words(mylist)\n",
+    "meaningful_bi=finder.nbest(bigram_measures.pmi,200)\n",
+    "for i in meaningful_bi:\n",
+    "    filtered_token.append(i[0]+'_'+i[1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then we sort the list in alphabetical order, and also retain only 1 entry per token to remove duplicates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sorted_list=sorted(filtered_token)\n",
+    "sorted_list=list(dict.fromkeys(sorted_list))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lastly for this part, we create a text file to store the output. Each line contains a token in the list, followed by its index in the list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('Vocab.txt','w') as f:\n",
+    "    for i in sorted_list:\n",
+    "        f.write(i+':'+str(sorted_list.index(i))+'\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
