Generate uni-bigram, Sparse Representation

--- a/Covid19Tweets_Codes.ipynb
+++ b/Covid19Tweets_Codes.ipynb
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,17 +515,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Create a text file to store the top 100 frequent unigrams\n",
+    "with open ('top100_unigram.txt','w') as f:\n",
+    "    for day in mydict.keys():\n",
+    "        stemmed_value=[stemmer.stem(i) for i in mydict[day]]\n",
+    "        f.write(day +':'+ str(FreqDist(stemmed_value).most_common(100))+'\\n')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Create a text file to store the top 100 frequent bigrams\n",
+    "with open('top100_bigram.txt','w') as f:\n",
+    "    for day in mydict.keys():\n",
+    "        bigrams=ngrams(mybidict[day],n=2)\n",
+    "        f.write(day+':'+str(FreqDist(bigrams).most_common(100))+'\\n')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lastly, we generate Sparse Representation, with count vector representation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vectorizer=CountVectorizer(analyzer='word')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since we introduce 200 meaninful bigrams into our vocab, we need to use mwetokenizer to make sure those bigrams are not split into 2 individual words."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mwetokenizer=MWETokenizer(meaningful_bi)\n",
+    "colloc_tweet=dict((day,mwetokenizer.tokenize(tweet)) for day,tweet in mybidict.items())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then start a loop to write the text file that has the sparse representation of the excel file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('Countvec.txt','w') as f:\n",
+    "    for day in colloc_tweet.keys():\n",
+    "        \n",
+    "        #For each loop, start the line with the date which can be assessed via mydict.keys()\n",
+    "        f.write(day+',')\n",
+    "        \n",
+    "        #join all the tokens of that day as a big string and make a list of 1 element, the whole string\n",
+    "        mystr=' '.join(colloc_tweet[day])\n",
+    "        list1=[]\n",
+    "        list1.append(mystr)\n",
+    "        \n",
+    "        #Then transform it into feature vectors\n",
+    "        data_features=vectorizer.fit_transform(list1)\n",
+    "        listword=[]\n",
+    "        \n",
+    "        #Get all the bigrams for each day\n",
+    "        diff=set(colloc_tweet[day])-set(mybidict[day])\n",
+    "        \n",
+    "        for word,count in zip(set(colloc_tweet[day]),data_features.toarray()[0]):\n",
+    "            if count>0:\n",
+    "                \n",
+    "                #Only stem unigrams \n",
+    "                if word not in list(diff):\n",
+    "                    word=stemmer.stem(word)\n",
+    "                \n",
+    "                #Now we can check if the stemmed unigram or the bigram are in the vocab, so we can check for their index\n",
+    "                if word in sorted_list:\n",
+    "                    #check if the word is in the sorted_list, then write the index of that word, as given in the vocab, and its count\n",
+    "                    pair=str(sorted_list.index(word))+':'+str(count)\n",
+    "                    listword.append(pair)\n",
+    "        f.write(','.join(listword))\n",
+    "        f.write('\\n')"
+   ]
   },
   {
    "cell_type": "code",
